--- a/infinite train/Packages/manifest.json
+++ b/infinite train/Packages/manifest.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "com.unity.postprocessing": "3.4.0",
+    "com.unity.render-pipelines.universal": "14.0.10",
+    "com.unity.shadergraph": "14.0.10",
     "com.unity.textmeshpro": "3.0.8",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
