--- a/infinite train/Packages/manifest.json
+++ b/infinite train/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.postprocessing": "3.4.0",
+    "com.unity.probuilder": "5.2.2",
     "com.unity.render-pipelines.universal": "14.0.10",
     "com.unity.shadergraph": "14.0.10",
     "com.unity.textmeshpro": "3.0.8",
